--- a/src/i18n/locales/kk.json
+++ b/src/i18n/locales/kk.json
@@ -196,9 +196,8 @@
   "landing": {
     "gallery": {
       "badge": "Қауымдастық",
-      "title": "Қауымдастық беттері",
-      "subtitle": "Қауымдастық жасаған беттерден шабыт алыңыз",
-      "viewAll": "Барлық беттерді көру"
+      "title": "Қауымдастық беттерін зерттеңіз",
+      "subtitle": "Қауымдастық жасаған керемет беттерден шабыт алыңыз"
     },
     "nav": {
       "signIn": "Кіру",
@@ -211,37 +210,32 @@
     },
     "hero": {
       "badge": "AI мини-сайт конструкторы",
-      "mainTitle": "Сатып тұрған мини-сайтты ~2 минутта жинаңыз",
-      "mainHighlight": "Бір сілтемеден - өтініштерге",
-      "valueProposition": "Мамандар, фрилансерлер мен бизнеске арналған AI сайт конструкторы. Дизайнер мен бағдарламашыларсыз бет жасаңыз, өтініштерді қабылдаңыз және тәртіп орнатыңыз.",
-      "benefit1": "AI бетті және мәтіндерді өзі жинайды",
-      "benefit2": "Өтініштер Мини-CRM мен Telegram-ға келеді",
-      "benefit3": "Аналитика нақты не жұмыс істейтінін көрсетеді",
+      "mainTitle": "link in bio және мини‑сайтты 2 минутта жасаңыз",
+      "mainHighlight": "Бір сілтеме — өтінімдер мен жазылулар",
+      "valueProposition": "Креаторлар, сарапшылар және шағын бизнеске арналған AI-құрастырушы. Дизайнерсіз бет, прайс және өтінім формасын жасаңыз.",
+      "benefit1": "AI құрылым мен мәтінді ұсынады",
+      "benefit2": "Өтінімдер CRM мен Telegram-ға түседі",
+      "benefit3": "Аналитика нәтижені көрсетеді",
       "primaryCta": "Бетті тегін жасау",
       "secondaryCta": "Мысалдарды көру",
       "microNote": "Тегін. Дайын конструктор. 2 минутта."
     },
-    "gallery": {
-      "badge": "Қауымдастық",
-      "title": "Қауымдастық беттерін зерттеңіз",
-      "subtitle": "Қауымдастық жасаған керемет беттерден шабыт алыңыз"
-    },
     "forWhom": {
-      "title": "lnkmx кімге арналған",
+      "title": "lnkmx кімдерге арналған",
       "expert": {
-        "title": "Мамандар",
-        "desc": "Жазылу, кейстер, прайс"
+        "title": "Сарапшылар мен коучтар",
+        "desc": "Қызметтер, кейстер, жазылу"
       },
       "freelancer": {
         "title": "Фрилансерлер",
-        "desc": "Портфолио, өтініштер"
+        "desc": "Портфолио және өтінімдер"
       },
       "beauty": {
-        "title": "Сұлулық",
+        "title": "Бьюти және сервистер",
         "desc": "Жазылу, пікірлер, гео"
       },
       "business": {
-        "title": "Бизнес",
+        "title": "Шағын бизнес",
         "desc": "Каталог, CRM, аналитика"
       }
     },
@@ -249,7 +243,7 @@
       "title": "Неге өтініштер жоғалады",
       "item1": "Bio-да хаос: прайс, жазылу және кейстер посттар мен сілтемелерге шашылған",
       "item2": "Адамдар бірдей сұрақтар қояды, сіз қолмен жауап бересіз және кездесулерді ұмытасыз",
-      "item3": "Taplink «сілтемелер менюіне» айналады, жазылуға жол емес",
+      "item3": "Кәдімгі link in bio тек сілтемелер тізіміне айналып, өтінімге жол бермейді",
       "item4": "Түсіністік жоқ: нені нақты басады және назар қайда жоғалады",
       "solution": "lnkmx бір түсінікті бет жасайды, онда келуші сіздің кім екеніңізді, қалай көмектесетіңізді, қанша тұратынын және өтініш үшін қайда басу керектігін тез түсінеді. Ал сіз лидтер мен аналитиканы бір жерде көресіз."
     },
@@ -257,16 +251,16 @@
       "title": "Бұл қалай жұмыс істейді",
       "cta": "Қазір байқап көру",
       "step1": {
-        "title": "Саланы таңдаңыз",
-        "description": "Кім екеніңізді айтыңыз және өзіңіз туралы бірнеше сөйлем жазыңыз"
+        "title": "Өзіңіз туралы айтыңыз",
+        "description": "Ниша, қызметтер және сілтемелер — AI контексті түсінеді"
       },
       "step2": {
-        "title": "AI бетті жинайды",
-        "description": "AI құрылымды, мәтіндерді, CTA және базалық прайсты жасайды"
+        "title": "AI бет құрастырады",
+        "description": "Дайын блоктар, мәтіндер және CTA-ларды өңдей аласыз"
       },
       "step3": {
-        "title": "Өтініштер алыңыз",
-        "description": "Жариялаңыз және мини-CRM + Telegram-да өтініштер алыңыз"
+        "title": "Жариялап, өтінім жинаңыз",
+        "description": "Сілтеме дайын, лидтер CRM-ге түседі"
       }
     },
     "features": {
@@ -343,81 +337,75 @@
       "title": "Жиі қойылатын сұрақтар",
       "subtitle": "lnkmx туралы танымал сұрақтарға жауаптар",
       "q1": {
-        "question": "lnkmx дегеніміз не және ол не үшін қажет?",
-        "answer": "lnkmx - бұл 2 минутта сататын бет жасауға мүмкіндік беретін AI мини-сайт конструкторы. Мамандар, фрилансерлер мен бизнеске барлық сілтемелерді, әлеуметтік желілерді және байланыс ақпаратын бір жерде біріктіру үшін тамаша сәйкес келеді."
+        "question": "lnkmx деген не және кімге арналған?",
+        "answer": "lnkmx — link in bio және мини‑сайттарға арналған AI-құрастырушы, ол сілтемелерді, қызметтерді және өтінімдерді бір жерде жинауға көмектеседі."
       },
       "q2": {
-        "question": "lnkmx-ті пайдалану қанша тұрады?",
-        "answer": "Базалық тариф мәңгі тегін. Premium: 3 ай - 4 350₸/ай, 6 ай - 3 500₸/ай, 12 ай - 2 610₸/ай. RoboKassa арқылы төлем. 14 күнде қайтару."
+        "question": "lnkmx бағасы қанша?",
+        "answer": "Негізгі тариф тегін. Pro: 3 ай — 4 350₸/ай, 6 ай — 3 500₸/ай, 12 ай — 2 610₸/ай. Онлайн төлем және 14 күндік қайтару."
       },
       "q3": {
         "question": "AI бет генерациясы қалай жұмыс істейді?",
-        "answer": "Саланы таңдаңыз (шаштараз, фотограф, жаттықтырушы), және AI 30 секундта профилі мен блоктары бар дайын бет жасайды."
+        "answer": "Нишаңызды таңдаңыз және бірнеше факт жазыңыз — AI құрылым, мәтін және CTA жасайды. Тегін: 1 генерация/ай, Pro: 5/ай."
       },
       "q4": {
-        "question": "Қандай блоктар қолжетімді?",
-        "answer": "20+ блок түрлері: профиль, сілтемелер, түймелер, суреттер, видеолар, карусельдер, тауарлар, прайс-тізімдер, формалар, карталар, мессенджерлер, пікірлер, FAQ, кері санақ таймерлері және басқалар."
+        "question": "Қандай блоктар бар?",
+        "answer": "20+ блок: профиль, сілтемелер, батырмалар, суреттер, видео, карусель, тауарлар, прайс, формалар, карталар, мессенджерлер, пікірлер, FAQ, таймерлер және тағы басқа."
       },
       "q5": {
         "question": "CRM және аналитика бар ма?",
-        "answer": "Иә! Premium тарифінде лидтерді басқаруға арналған толық CRM және жаңа өтініштер туралы Telegram хабарламалары бар. Аналитика басуларды, трафик көздерін және келушілер мінез-құлқын көрсетеді."
+        "answer": "Иә. Pro тарифінде CRM және Telegram хабарламалары бар. Аналитика кликтерді және трафикті көрсетеді."
       },
       "q6": {
-        "question": "Мобильді редактор қолдау көрсетіле ме?",
-        "answer": "Иә! lnkmx мобильді құрылғыларға арнайы жасалған. Бетті смартфоннан толық өңдей аласыз."
+        "question": "Мобильді редактор бар ма?",
+        "answer": "Иә. Бетті смартфоннан тікелей өңдей аласыз."
       },
       "q7": {
-        "question": "lnkmx Linktree және Taplink-тен несімен жақсы?",
-        "answer": "2 минутта AI генерация, 0% комиссия, ішкі CRM, Telegram хабарламалары, заманауи дизайн, RU/KZ тілдерін қолдау. Бағалар 2 610₸/ай-дан."
+        "question": "Қандай интеграциялар бар?",
+        "answer": "Telegram — хабарламалар үшін, Google Күнтізбе — жазылу үшін. Әлеуметтік желілер блок ретінде бар."
+      },
+      "q8": {
+        "question": "Сатылымнан комиссия аласыздар ма?",
+        "answer": "Жоқ. Сатылымнан комиссия 0% — тек жазылым төлейсіз."
+      },
+      "q9": {
+        "question": "Pro тарифіне қалай төлеуге болады?",
+        "answer": "Картамен және қолжетімді төлем әдістерімен. Сонымен қатар токендер қолдануға болады (100 токен = 1 күн Pro)."
+      },
+      "q10": {
+        "question": "Қайтару шарттары қандай?",
+        "answer": "Қайтару төлемнен кейін 14 күн ішінде жасалады. Толығырақ пайдаланушы келісімінде."
+      },
+      "q11": {
+        "question": "Нақты мысалдарды көруге бола ма?",
+        "answer": "Иә. Галереяда креаторлар, дүкендер және сервис беттері бар."
+      },
+      "q12": {
+        "question": "lnkmx Linktree немесе Taplink-тен несімен ерекшеленеді?",
+        "answer": "lnkmx AI бет құрастыруы, CRM және хабарламаларды қосымша төлемсіз береді, блоктар икемді және жергілікті тілдер бар."
+      },
+      "q13": {
+        "question": "lnkmx дүкен немесе сервис үшін жарай ма?",
+        "answer": "Иә. Каталог, прайс, өтінім формалары және байланыс батырмаларын қосуға болады."
+      },
+      "q14": {
+        "question": "Өз доменімді қоса аламын ба?",
+        "answer": "Иә, Pro тарифінде жеке домендер мен брендтеу қолжетімді."
       }
     }
   },
   "dashboard": {
-    "tabs": {
-      "projects": "Жобалар",
-      "editor": "Редактор",
-      "crm": "CRM",
-      "analytics": "Аналитика",
-      "gallery": "Галерея",
-      "settings": "Баптаулар"
-    },
-    "editor": {
-      "addBlock": "Блок қосу",
-      "preview": "Алдын ала қарау",
-      "publish": "Жариялау",
-      "unpublish": "Жарияламау",
-      "undo": "Болдырмау",
-      "redo": "Қайталау",
-      "structure": "Құрылым",
-      "reorder": "Ретті өзгерту",
-      "theme": "Тема",
-      "background": "Фон"
-    },
-    "crm": {
-      "leads": "Лидтер",
-      "bookings": "Жазылулар",
-      "automations": "Автоматизациялар",
-      "analytics": "Аналитика",
-      "newLead": "Жаңа лид",
-      "contacted": "Байланысылды",
-      "qualified": "Расталған",
-      "converted": "Конверттелген",
-      "lost": "Жоғалған"
-    },
-    "analytics": {
-      "views": "Қаралымдар",
-      "clicks": "Басулар",
-      "leads": "Лидтер",
-      "conversion": "Конверсия",
-      "sources": "Көздер",
-      "devices": "Құрылғылар",
-      "topBlocks": "Топ блоктар"
-    },
-    "publishing": {
-      "pagePublished": "Бет жарияланды!",
-      "copyLink": "Сілтемені көшіру",
-      "share": "Бөлісу",
-      "qrCode": "QR-код"
+    "loadError": "Жүктеу қатесі",
+    "loadErrorDesc": "Бет деректерін жүктеу сәтсіз аяқталды",
+    "tryAgain": "Қайталап көру",
+    "settings": "Баптаулар",
+    "collabs": "Коллабтар",
+    "aiBlocksCreated": "✨ AI арқылы {{count}} блок жасалды",
+    "blocksAdded": "{{count}} блок қосылды",
+    "onboardingComplete": "Қош келдіңіз! Бетіңізді жасай бастаңыз.",
+    "seo": {
+      "title": "lnkmx кабинеті",
+      "description": "Беттерді, лидтерді және аналитиканы басқарыңыз."
     }
   },
   "blocks": {
@@ -431,26 +419,74 @@
     "messenger": "Мессенджер",
     "separator": "Бөлгіш",
     "product": "Тауар",
-    "catalog": "Каталог",
-    "pricing": "Прайс",
+    "catalog": {
+      "empty": "Каталогқа тауарларды қосыңыз",
+      "uncategorized": "Санатсыз"
+    },
+    "pricing": {
+      "empty": "Қызметтерді қосыңыз",
+      "hit": "Танымал"
+    },
     "form": "Форма",
     "booking": "Жазылу",
-    "map": "Карта",
-    "faq": "FAQ",
-    "testimonial": "Пікір",
-    "countdown": "Таймер",
-    "carousel": "Карусель",
-    "newsletter": "Жазылу",
+    "map": {
+      "noAddress": "Мекенжайды көрсетіңіз"
+    },
+    "faq": {
+      "empty": "Сұрақтар мен жауаптарды қосыңыз"
+    },
+    "testimonial": "Пікірлер",
+    "countdown": {
+      "expired": "Уақыт аяқталды!",
+      "noDate": "Күнді көрсетіңіз",
+      "days": "күн",
+      "hours": "сағат",
+      "minutes": "минут",
+      "seconds": "секунд"
+    },
+    "carousel": "Галерея",
+    "newsletter": "Жаршы",
     "avatar": "Аватар",
-    "download": "Жүктеу",
-    "shoutout": "Ұсыныс",
-    "community": "Қоғамдастық",
-    "beforeAfter": "Дейін/Кейін",
+    "download": "Файл",
+    "shoutout": "Атап өту",
+    "community": {
+      "title": "Атауы",
+      "titlePlaceholder": "Менің жабық клубым",
+      "description": "Сипаттама",
+      "descriptionPlaceholder": "Эксклюзивті контент, сахна артындағы, сұрақ-жауап",
+      "telegramLink": "Telegram сілтемесі",
+      "linkHint": "Жабық арнаңызға немесе топқа шақыру сілтемесін қолданыңыз",
+      "memberCount": "Мүшелер саны",
+      "icon": "Белгіше",
+      "style": "Стиль",
+      "iconUsers": "Мүшелер",
+      "iconCrown": "Тәж",
+      "iconStar": "Жұлдыз",
+      "iconHeart": "Жүрек",
+      "iconZap": "Найзағай",
+      "iconLock": "Құлып",
+      "styleDefault": "Стандартты",
+      "styleDefaultDesc": "Қарапайым және таза",
+      "stylePremium": "Premium",
+      "stylePremiumDesc": "Алтын градиент",
+      "styleExclusive": "Exclusive",
+      "styleExclusiveDesc": "Күлгін градиент"
+    },
+    "beforeAfter": {
+      "before": "Бұрын",
+      "after": "Кейін",
+      "noImages": "Суреттерді қосыңыз"
+    },
     "customCode": "Код",
     "scratch": "Скретч",
-    "search": "Іздеу"
+    "added": "Блок қосылды",
+    "deleted": "Блок жойылды",
+    "restored": "Блок қалпына келтірілді",
+    "addFailed": "Блок қосу сәтсіз аяқталды",
+    "premiumRequired": "Бұл блок тек PRO үшін",
+    "limitReached": "Блок шегіне жетті. Premium-ға жаңартыңыз."
   },
-"auth": {
+  "auth": {
     "signIn": "Кіру",
     "signUp": "Тіркелу",
     "signOut": "Шығу",
@@ -515,6 +551,10 @@
       "savePassword": "Құпия сөзді сақтау",
       "back": "Артқа",
       "recoverViaTelegram": "Telegram арқылы қалпына келтіру"
+    },
+    "seo": {
+      "title": "lnkmx жүйесіне кіру",
+      "description": "Кіру арқылы link in bio бетіңізді жасаңыз және жариялаңыз."
     }
   },
   "pricing": {
@@ -556,7 +596,11 @@
     "description": "LinkMAX мүмкіндіктерін бизнесіңіз үшін толық ашыңыз",
     "alreadyFree": "Тегін тариф әлдеқашан белсенді",
     "comingSoon": "Төлем жуырда қолжетімді болады. Жаңартуларды қадағалаңыз.",
-    "currentPlan": "Ағымдағы жоспар"
+    "currentPlan": "Ағымдағы жоспар",
+    "seo": {
+      "title": "lnkmx тарифтері — link in bio және мини‑сайт",
+      "description": "Тегін және Pro тарифтерін салыстырыңыз: AI‑генерация, CRM, аналитика және брендтеу."
+    }
   },
   "gallery": {
     "title": "Беттер галереясы",
@@ -572,7 +616,11 @@
     "alreadyLiked": "Бұл бетті бұрын ұнатқансыз",
     "views": "қаралымдар",
     "untitled": "Атаусыз",
-    "empty": "Беттер табылмады"
+    "empty": "Беттер табылмады",
+    "seo": {
+      "title": "lnkmx галереясы — link in bio мысалдары",
+      "description": "Нақты пайдаланушы беттері: шаблондар, нишалар, идеялар."
+    }
   },
   "errors": {
     "general": "Қате орын алды",
@@ -672,6 +720,10 @@
       "thu": "Бс",
       "fri": "Жм",
       "sat": "Сб"
+    },
+    "seo": {
+      "title": "lnkmx әкімшілік панелі",
+      "description": "lnkmx басқаруға арналған ішкі құралдар."
     }
   },
   "adminCharts": {
@@ -1410,91 +1462,6 @@
     "errorCheck": "Тексеру қатесі. Қайталап көріңіз",
     "pasteError": "Қою сәтсіз аяқталды"
   },
-  "blocks": {
-    "profile": "Профиль",
-    "link": "Сілтеме",
-    "button": "Түйме",
-    "text": "Мәтін",
-    "image": "Сурет",
-    "video": "Видео",
-    "socials": "Әлеуметтік желілер",
-    "messenger": "Мессенджер",
-    "separator": "Бөлгіш",
-    "product": "Тауар",
-    "catalog": "Каталог",
-    "pricing": "Бағалар",
-    "form": "Форма",
-    "booking": "Жазылу",
-    "map": "Карта",
-    "faq": "FAQ",
-    "testimonial": "Пікірлер",
-    "countdown": "Таймер",
-    "carousel": "Галерея",
-    "newsletter": "Жаршы",
-    "avatar": "Аватар",
-    "download": "Файл",
-    "shoutout": "Атап өту",
-    "community": "Қоғамдастық",
-    "beforeAfter": "Бұрын/Кейін",
-    "customCode": "Код",
-    "scratch": "Скретч",
-    "added": "Блок қосылды",
-    "deleted": "Блок жойылды",
-    "restored": "Блок қалпына келтірілді",
-    "addFailed": "Блок қосу сәтсіз аяқталды",
-    "premiumRequired": "Бұл блок тек PRO үшін",
-    "limitReached": "Блок шегіне жетті. Premium-ға жаңартыңыз.",
-    "pricing": {
-      "empty": "Қызметтерді қосыңыз",
-      "hit": "Танымал"
-    },
-    "faq": {
-      "empty": "Сұрақтар мен жауаптарды қосыңыз"
-    },
-    "countdown": {
-      "expired": "Уақыт аяқталды!",
-      "noDate": "Күнді көрсетіңіз",
-      "days": "күн",
-      "hours": "сағат",
-      "minutes": "минут",
-      "seconds": "секунд"
-    },
-    "beforeAfter": {
-      "before": "Бұрын",
-      "after": "Кейін",
-      "noImages": "Суреттерді қосыңыз"
-    },
-    "map": {
-      "noAddress": "Мекенжайды көрсетіңіз"
-    },
-    "catalog": {
-      "empty": "Каталогқа тауарларды қосыңыз",
-      "uncategorized": "Санатсыз"
-    },
-    "community": {
-      "title": "Атауы",
-      "titlePlaceholder": "Менің жабық клубым",
-      "description": "Сипаттама",
-      "descriptionPlaceholder": "Эксклюзивті контент, сахна артындағы, сұрақ-жауап",
-      "telegramLink": "Telegram сілтемесі",
-      "linkHint": "Жабық арнаңызға немесе топқа шақыру сілтемесін қолданыңыз",
-      "memberCount": "Мүшелер саны",
-      "icon": "Белгіше",
-      "style": "Стиль",
-      "iconUsers": "Мүшелер",
-      "iconCrown": "Тәж",
-      "iconStar": "Жұлдыз",
-      "iconHeart": "Жүрек",
-      "iconZap": "Найзағай",
-      "iconLock": "Құлып",
-      "styleDefault": "Стандартты",
-      "styleDefaultDesc": "Қарапайым және таза",
-      "stylePremium": "Premium",
-      "stylePremiumDesc": "Алтын градиент",
-      "styleExclusive": "Exclusive",
-      "styleExclusiveDesc": "Күлгін градиент"
-    }
-  },
   "product": {
     "authRequired": "Сатып алу үшін авторизация қажет",
     "notEnoughTokens": "Токендер жеткіліксіз",
@@ -1609,16 +1576,6 @@
     "reasonLabel": "Неге ұсынып тұрсыз?",
     "reasonPlaceholder": "Керемет маман, ұсынамын!",
     "blockDescription": "Аудиторияңызға басқа пайдаланушыларды ұсыныңыз"
-  },
-  "dashboard": {
-    "loadError": "Жүктеу қатесі",
-    "loadErrorDesc": "Бет деректерін жүктеу сәтсіз аяқталды",
-    "tryAgain": "Қайталап көру",
-    "settings": "Баптаулар",
-    "collabs": "Коллабтар",
-    "aiBlocksCreated": "✨ AI арқылы {{count}} блок жасалды",
-    "blocksAdded": "{{count}} блок қосылды",
-    "onboardingComplete": "Қош келдіңіз! Бетіңізді жасай бастаңыз."
   },
   "blockEditor": {
     "advancedSettings": "Қосымша баптаулар",
@@ -1805,5 +1762,24 @@
     "thursday": "Бс",
     "friday": "Жм",
     "saturday": "Сн"
+  },
+  "seo": {
+    "landing": {
+      "title": "lnkmx — link in bio және мини-сайт 2 минутта",
+      "description": "link in bio және мини‑сайттарға арналған AI-құрастырушы. 2 минутта сілтемелер, прайс және өтінімдерді жинаңыз.",
+      "keywords": "link in bio, сілтемелер беті, мини-сайт, linktree баламасы, taplink баламасы"
+    }
+  },
+  "adminTranslations": {
+    "seo": {
+      "title": "lnkmx аудармалары",
+      "description": "Ішкі аударма басқаруы."
+    }
+  },
+  "install": {
+    "seo": {
+      "title": "lnkmx орнату",
+      "description": "lnkmx қолданбасын PWA ретінде орнатыңыз."
+    }
   }
 }
